--- a/dashboard.html
+++ b/dashboard.html
@@ -1,85 +1,188 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Daily Expense Tracker</title>
-  <link href="css/output.css" rel="stylesheet">
-</head>
-<body class="bg-gradient-to-br from-teal-50 via-cyan-50 to-blue-50 min-h-screen font-sans antialiased">
-  <div id="app-container" class="max-w-4xl mx-auto px-4 py-6 md:py-10 hidden">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Daily Expense Tracker</title>
+    <link href="css/output.css" rel="stylesheet" />
+  </head>
 
-    <!-- Header -->
-    <header class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-10 gap-4">
-      <div>
-        <h1 class="text-3xl md:text-4xl font-bold text-teal-800">Daily Expenses</h1>
-        <p class="text-teal-600 mt-1">Track your spending with ease</p>
-      </div>
-      <button id="openAddBtn" 
-              class="bg-teal-600 hover:bg-teal-700 text-white px-6 py-3 rounded-xl font-medium shadow-lg shadow-teal-200/50 transition-all transform hover:scale-105 active:scale-95">
-        + Add New Expense
-      </button>
-    </header>
+  <body class="bg-slate-100 min-h-screen font-sans antialiased">
+    <!-- Dashboard Wrapper -->
+    <div id="app-container" class="hidden min-h-screen">
+      <!-- Header -->
+      <header class="bg-white border-b shadow-sm sticky top-0 z-40">
+        <div
+          class="max-w-6xl mx-auto px-4 py-4 flex flex-col md:flex-row md:items-center md:justify-between gap-4"
+        >
+          <div>
+            <h1 class="text-2xl font-bold text-teal-700">Daily Expenses</h1>
+            <p class="text-sm text-slate-500">Track your spending with ease</p>
+          </div>
 
-    <!-- Main content card -->
-    <div class="bg-white/80 backdrop-blur-xl rounded-3xl shadow-2xl border border-white/40 overflow-hidden">
-      <div class="p-6 md:p-8 border-b border-teal-100 flex justify-between items-center">
-        <h2 class="text-xl md:text-2xl font-semibold text-teal-800">Today's Spending</h2>
-        <div class="text-right">
-          <p class="text-sm text-teal-600">Total</p>
-          <p id="todayTotal" class="text-3xl font-bold text-rose-600">₹ 0</p>
+          <div class="flex flex-wrap gap-3">
+            <button
+              id="openAddBtn"
+              class="bg-teal-600 hover:bg-teal-700 text-white px-4 py-2 rounded-lg text-sm font-medium transition"
+            >
+              + Add Expense
+            </button>
+
+            <button
+              id="buyPremiumBtn"
+              class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded-lg text-sm font-medium transition"
+            >
+              Buy Premium
+            </button>
+
+            <button
+              id="logout"
+              class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded-lg text-sm font-medium transition"
+            >
+              Logout
+            </button>
+          </div>
         </div>
+      </header>
+      <div
+        id="premiumStatus"
+        class="hidden mt-4 px-4 py-2 rounded-lg bg-emerald-100 text-emerald-700 font-medium flex items-center justify-between gap-4"
+      >
+        <span>⭐ You are a premium user</span>
+
+        <button
+          id="viewLeaderboardBtn"
+          class="bg-emerald-600 hover:bg-emerald-700 text-white px-3 py-1.5 rounded-md text-sm transition"
+        >
+          View Leaderboard
+        </button>
       </div>
 
-      <div id="todayList" class="divide-y divide-teal-100 max-h-[60vh] overflow-y-auto p-2 md:p-4">
-        <!-- Expenses go here -->
+      <!-- Main Content -->
+      <main class="max-w-6xl mx-auto px-4 py-6">
+        <!-- Summary Card -->
+        <div class="bg-white rounded-2xl shadow border mb-6">
+          <div class="flex justify-between items-center px-6 py-4 border-b">
+            <h2 class="text-lg font-semibold text-slate-700">
+              Today's Spending
+            </h2>
+            <div class="text-right">
+              <p class="text-xs text-slate-500">Total</p>
+              <p id="todayTotal" class="text-2xl font-bold text-rose-600">
+                ₹ 0
+              </p>
+            </div>
+          </div>
+
+          <!-- Expense List -->
+          <div id="todayList" class="divide-y max-h-[65vh] overflow-y-auto">
+            <!-- Expenses injected here -->
+          </div>
+        </div>
+      </main>
+    </div>
+
+    <!-- Add Expense Modal -->
+    <div
+      id="addModal"
+      class="fixed inset-0 bg-black/50 flex items-center justify-center opacity-0 pointer-events-none transition z-50"
+    >
+      <div
+        class="bg-white rounded-2xl w-full max-w-md mx-4 p-6 shadow-xl scale-95 opacity-0 transition"
+      >
+        <div class="flex justify-between items-center mb-5">
+          <h3 class="text-xl font-semibold text-slate-700">Add Expense</h3>
+          <button
+            id="closeAddBtn"
+            class="text-slate-500 hover:text-slate-700 text-xl"
+          >
+            &times;
+          </button>
+        </div>
+
+        <form id="expenseForm" class="space-y-4">
+          <input
+            id="amount"
+            type="number"
+            step="0.01"
+            min="0"
+            placeholder="Amount (₹)"
+            required
+            class="w-full px-4 py-3 border rounded-lg focus:ring-2 focus:ring-teal-500 outline-none"
+          />
+
+          <input
+            id="title"
+            type="text"
+            placeholder="Expense title"
+            required
+            class="w-full px-4 py-3 border rounded-lg focus:ring-2 focus:ring-teal-500 outline-none"
+          />
+
+          <select
+            id="category"
+            required
+            class="w-full px-4 py-3 border rounded-lg focus:ring-2 focus:ring-teal-500 outline-none"
+          >
+            <option value="" disabled selected>Select Category</option>
+            <option value="Food & Drinks">🍴 Food & Drinks</option>
+            <option value="Transport">🚕 Transport</option>
+            <option value="Shopping">🛍️ Shopping</option>
+            <option value="Bills">💡 Bills & Utilities</option>
+            <option value="Entertainment">🎬 Entertainment</option>
+            <option value="Health">🩺 Health</option>
+            <option value="Petrol">⛽ Fuel</option>
+            <option value="Salary">💰 Salary / Income</option>
+            <option value="Other">📌 Other</option>
+          </select>
+
+          <div class="flex gap-3 pt-4">
+            <button
+              type="button"
+              id="closeAddBtn"
+              class="flex-1 py-3 bg-slate-200 rounded-lg text-slate-700 hover:bg-slate-300 transition"
+            >
+              Cancel
+            </button>
+
+            <button
+              type="submit"
+              class="flex-1 py-3 bg-teal-600 hover:bg-teal-700 text-white rounded-lg transition"
+            >
+              Add
+            </button>
+          </div>
+        </form>
       </div>
     </div>
-  </div>
 
-  <!-- Add Expense Modal -->
-  <div id="addModal" class="fixed inset-0 bg-black/60 backdrop-blur-sm flex items-center justify-center opacity-0 pointer-events-none transition-all duration-300 z-50">
-    <div class="bg-white/95 backdrop-blur-md rounded-3xl p-6 md:p-8 w-full max-w-lg mx-4 shadow-2xl scale-95 opacity-0 transition-all duration-300 border border-white/30">
-      <div class="flex justify-between items-center mb-6">
-        <h3 class="text-2xl font-bold text-teal-800">Add Expense</h3>
-        <button id="closeAddBtn" class="text-gray-500 hover:text-gray-700 text-2xl">&times;</button>
-      </div>
-
-      <form id="expenseForm" class="space-y-5">
-        <input id="amount" type="number" step="0.01" min="0" placeholder="Amount (₹)" required
-               class="w-full p-4 bg-gray-50/70 border border-gray-200 rounded-xl focus:ring-2 focus:ring-teal-400 focus:border-transparent outline-none transition"/>
-        
-        <input id="title" type="text" placeholder="What did you spend on?" required
-               class="w-full p-4 bg-gray-50/70 border border-gray-200 rounded-xl focus:ring-2 focus:ring-teal-400 focus:border-transparent outline-none transition"/>
-        
-        <select id="category" required
-                class="w-full p-4 bg-gray-50/70 border border-gray-200 rounded-xl focus:ring-2 focus:ring-teal-400 focus:border-transparent outline-none transition">
-          <option value="" disabled selected>Select Category</option>
-          <option value="Food & Drinks">🍴 Food & Drinks</option>
-          <option value="Transport">🚕 Transport</option>
-          <option value="Shopping">🛍️ Shopping</option>
-          <option value="Bills">💡 Bills & Utilities</option>
-          <option value="Entertainment">🎬 Entertainment</option>
-          <option value="Health">🩺 Health</option>
-          <option value="Petrol">⛽ Fuel</option>
-          <option value="Salary">💰 Salary / Income</option>
-          <option value="Other">📌 Other</option>
-        </select>
-
-        <div class="flex gap-4 mt-8">
-          <button type="button" id="closeAddBtn" 
-                  class="flex-1 py-4 bg-gray-200 hover:bg-gray-300 text-gray-800 rounded-xl font-medium transition">
-            Cancel
-          </button>
-          <button type="submit" 
-                  class="flex-1 py-4 bg-teal-600 hover:bg-teal-700 text-white rounded-xl font-medium shadow-lg shadow-teal-200/50 transition transform hover:scale-105">
-            Add Expense
+    <!-- Leaderboard Modal -->
+    <div
+      id="leaderboardModal"
+      class="fixed inset-0 bg-black/50 flex items-center justify-center opacity-0 pointer-events-none transition z-50"
+    >
+      <div
+        class="bg-white rounded-2xl w-full max-w-md mx-4 p-6 shadow-xl scale-95 opacity-0 transition"
+      >
+        <div class="flex justify-between items-center mb-4">
+          <h3 class="text-xl font-semibold text-slate-700">
+            Expense Leaderboard
+          </h3>
+          <button
+            id="closeLeaderboardBtn"
+            class="text-slate-500 hover:text-slate-700 text-xl"
+          >
+            &times;
           </button>
         </div>
-      </form>
-    </div>
-  </div>
 
-  <script src="js/script.js"></script>
-</body>
+        <div id="leaderboardContent" class="space-y-3 text-slate-700">
+          <!-- Leaderboard rows injected here -->
+        </div>
+      </div>
+    </div>
+
+    <script src="https://sdk.cashfree.com/js/v3/cashfree.js"></script>
+    <script src="js/script.js"></script>
+  </body>
 </html>
