--- a/dashboard.html
+++ b/dashboard.html
@@ -159,6 +159,42 @@
               </button>
             </div>
 
+            <!-- Pagination & Items per page controls -->
+            <div
+              class="flex justify-between items-center px-6 py-4 border-b border-white/5 gap-4 flex-wrap"
+            >
+              <div class="flex items-center gap-4">
+                <label for="itemsPerPage" class="text-sm text-slate-400"
+                  >Show:</label
+                >
+                <select
+                  id="itemsPerPage"
+                  class="bg-[#1e293b] border border-white/10 rounded-lg px-3 py-1.5 text-sm focus:outline-none focus:border-teal-500"
+                >
+                  <option value="5">5</option>
+                  <option value="10" selected>10</option>
+                  <option value="20">20</option>
+                  <option value="50">50</option>
+                </select>
+              </div>
+
+              <div class="flex items-center gap-4 text-sm">
+                <button
+                  id="prevPage"
+                  class="px-3 py-1 bg-slate-700 hover:bg-slate-600 rounded-lg disabled:opacity-50 disabled:cursor-not-allowed"
+                >
+                  ← Prev
+                </button>
+                <span id="pageInfo" class="text-slate-400">Page 1 of 1</span>
+                <button
+                  id="nextPage"
+                  class="px-3 py-1 bg-slate-700 hover:bg-slate-600 rounded-lg disabled:opacity-50 disabled:cursor-not-allowed"
+                >
+                  Next →
+                </button>
+              </div>
+            </div>
+
             <div
               id="todayList"
               class="divide-y divide-white/5 max-h-[60vh] overflow-y-auto [&>*]:bg-transparent [&>*]:text-white [&>*_small]:text-slate-400"
